# CAMRAT

./: .gitignore  README.md
CAMRAT/: .project  build.gradle  settings.gradle
CAMRAT/src/main/java/hackrats/camrat/controls/: CAMRATControls.java
CameraInput/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
CameraInput/src/: CMakeLists.txt  CMakeLists.txt.old  main.cpp  main.hpp
CameraInput/src/opencvimagereader/: CMakeLists.txt  make_dll_symbols.h  opencvimagereader.cpp  opencvimagereader.h
CameraInput/winbuild/: Makefile  cmake_install.cmake
CameraInputWindows/: CMakeLists.txt  README.md
CameraInputWindows/src/: CMakeLists.txt  main.cpp
CameraInputWindows/src/opencvimagereader/: CMakeLists.txt  make_dll_symbols.h  opencvimagereader.cpp  opencvimagereader.h
Unity Maze Game/: Assembly-CSharp.csproj  CamRat Maze - HackRats.sln
Unity Maze Game/Assets/0. Scenes/: DungeonLvl1.unity  Scene2.unity
Unity Maze Game/Assets/1. Scripts/: Respawn.cs  ScoreCard.cs
Unity Maze Game/Assets/2. Prefabs/: Pizza.prefab
Unity Maze Game/Assets/Mini Alchemy/Materials/: Cristal_Flask_Alb.mat  Cristal_Flask_N.mat  Mortar_Alb.mat
Unity Maze Game/Assets/Models/Materials/: plinth_JPG.mat  plinth_PSD.mat
Unity Maze Game/Assets/Pizza/Materials/: Pizza_Albedo.mat
Unity Maze Game/Assets/TopDown small Dungeon pack/Materials/Materials/: flor_mat_height.mat  wall_mat_height.mat  wall_mat_normal.mat  wall_mat_roughness.mat
Unity Maze Game/Assets/TopDown small Dungeon pack/Scenes/: Demo_level.unity
Unity Maze Game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
